# LIDAR_AND_CAMERA_CALIBRATION_USING_LINE_FEATURES_IN_ROAD_SCENE

./: .gitignore  README.md  requirements.txt
src/config/: lidar_sensorcar_params.yaml
src/cpp/: CMakeLists.txt  lidar.cpp  refinement.cpp
src/my_thesis_lane_mask/: README.md  ai_segmentation.py  crf_smoother.py  generate_lane_mask.py  requirements.txt
src/python/: camera1.py  pipeline.py
